made map shorter so it displays correctly on mobile

--- a/styles/css.css
+++ b/styles/css.css
@@ -6,7 +6,7 @@ html, body {
   width: 100vw;
 }
 #map {
-  height: 93%;
+  height: 89%;
   width: 100%;
 }
 .my-location-image {
